--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -4,4 +4,13 @@
 @import "scaffolding.scss";
 @import "blocks/page-header.scss";
 @import "blocks/page-main.scss";
-@import "blocks/passage.scss";
+@import "blocks/service.scss";
+@import "blocks/arrival.scss";
+@import "blocks/collection.scss";
+@import "blocks/product.scss";
+@import "blocks/sport.scss";
+@import "blocks/discover.scss";
+@import "blocks/best.scss";
+@import "blocks/blog.scss";
+@import "blocks/footer.scss";
+
