--- a/source/scss/blocks/page-header.scss
+++ b/source/scss/blocks/page-header.scss
@@ -1,19 +1,44 @@
 .page-header {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: space-between;
   margin: 0 auto;
   width: 1100px;
   min-height: 50px;
-  padding: 25px 0;
+}
+
+.page-header__up {
+  display: flex;
+  justify-content: space-between;
+  min-height: 45px;
+  background-color: #31353d;
+  color: #ffffff;
+}
+
+.page-header__left,
+.page-header__right {
+  display: flex;
+}
+
+.page-header__down {
+  display: flex;
+  justify-content: space-between;
 }
 
 .page-header__logo {
   display: block;
 }
 
-.page-header__list {
-  width: 490px;
+.page-header__menu {
+  width: 540px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  @include list;
+}
+
+.page-header__profil {
+  width: 190px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
