--- a/source/scss/blocks/page-main.scss
+++ b/source/scss/blocks/page-main.scss
@@ -3,13 +3,9 @@
 }
 
 .page-main__header {
-  min-height: 570px;
+  min-height: 630px;
   margin: 0 auto;
-  text-align: center;
-
-  background-image: url("../img/Layer 1.jpg");
-  background-repeat: no-repeat;
-  background-position: 0 0;
+  background-color: #96dbc9;
 }
 
 .page-main__title {
@@ -17,7 +13,7 @@
   font-family: "Arial", "Helvetica", sans-serif;
   font-size: 100px;
   line-height: 60px;
-  color: $cl-white;
+  color: #31415c;
 }
 
 .page-main__menu {
