--- a/source/scss/scaffolding.scss
+++ b/source/scss/scaffolding.scss
@@ -4,6 +4,11 @@ body {
 
 .container {
   margin: 0 auto;
-  padding: 0;
-  width: 1100px;
+  padding: 0 15px;
+  width: 1170px;
+}
+
+a {
+  text-decoration: none;
+  color: $cl-white;
 }
