--- a/source/scss/blocks/best.scss
+++ b/source/scss/blocks/best.scss
@@ -10,6 +10,20 @@
     align-items: center;
 }
 
+.best__title {
+    position: relative;
+
+    &::before {
+        position: absolute;
+        content: "";
+        top: 32px;
+        left: 0;
+        width: 50px;
+        height: 1px;
+        background-color: #000000;
+    }
+}
+
 .best__all {
     text-transform: uppercase;
 }
