--- a/source/scss/blocks/service.scss
+++ b/source/scss/blocks/service.scss
@@ -4,6 +4,74 @@
     justify-content: space-between;
 }
 
+.service__item {
+    width: 200px;
+    padding-left: 70px;
+
+    &--auto {
+        position: relative;
+
+        &::before {
+            position: absolute;
+            content: "";
+            top: 5px;
+            left: 20px;
+            width: 29px;
+            height: 25px;
+            background-image: url("../img/Free_Shiping.png")
+        }
+    }
+
+    &--support {
+        position: relative;
+
+        &::before {
+            position: absolute;
+            content: "";
+            top: 2px;
+            left: 20px;
+            width: 30px;
+            height: 31px;
+            background-image: url("../img/Support.png")
+        }
+    }
+
+    &--return {
+        position: relative;
+
+        &::before {
+            position: absolute;
+            content: "";
+            top: 6px;
+            left: 20px;
+            width: 33px;
+            height: 20px;
+            background-image: url("../img/Return.png")
+        }
+    }
+
+    &--payment {
+        position: relative;
+
+        &::before {
+            position: absolute;
+            content: "";
+            top: 4px;
+            left: 20px;
+            width: 33px;
+            height: 27px;
+            background-image: url("../img/Payment.png")
+        }
+    }
+
+}
+
 .service__name {
+    margin: 0;
+    font-size: 14px;
     text-transform: uppercase;
+}
+
+.service__description {
+    margin: 0;
 }
