--- a/source/scss/blocks/arrival.scss
+++ b/source/scss/blocks/arrival.scss
@@ -3,25 +3,34 @@
     justify-content: space-between;
     margin-top: 30px;
     margin-bottom: 30px;
-    padding-left: 15px;
+}
+
+.arrival__wrapper {
+    display: flex;
+    justify-content: space-between;
 }
 
 .arrival__left,
 .arrival__right {
-    width: 570px;
     min-height: 330px;
+    display: flex;
+    flex-direction: column;
 }
 
 .arrival__left {
+    width: 555px;
     padding: 70px 15px 0 0;
     text-align: right;
     background-color: #eff2f7;
+    background-image: url("../img/2_1.jpg");
 }
 
-.arrival__right {
+.arrival__right { 
+    width: 550px;
     padding: 70px 0 0 20px;
     text-align: left;
     background-color: #f5f5f5;
+    background-image: url("../img/2_2.jpg");
 }
 
 .arrival__intro-boy {
@@ -33,14 +42,14 @@
 
 .arrival__boy,
 .arrival__girl {
-    margin: 0 0 30px;
+    margin: 0 0 20px;
     font-size: 30px;
     text-transform: uppercase;
     color: #252525;
 }
 
 .arrival__price-boy {
-    margin: 0 0 30px;
+    margin: 0 0 20px;
     font-size: 30px;
     color: #ff0036;
 }
@@ -53,14 +62,20 @@
 }
 
 .arrival__price-girl {
-    margin: 0 0 30px;
+    margin: 0 0 20px;
     font-size: 30px;
     color: #00b8b8;
 }
 
-.arrival__description {
-    margin: 0 0 30px;
-    margin-right: 0;
+.arrival__description-boy {
+    margin: 0 0 20px;
+    margin-left: auto;
+    width: 210px;
+}
+
+.arrival__description-girl {
+    margin: 0 0 20px;
+    margin-right: auto;
     width: 210px;
 }
 
