--- a/source/scss/blocks/sport.scss
+++ b/source/scss/blocks/sport.scss
@@ -1,16 +1,37 @@
 .sport {
     margin-bottom: 30px;
-    min-height: 200px;
+}
+
+.sport__wrapper {
+    padding: 25px 0 0 575px;
+    min-height: 175px;
+    background-image: url("../img/Bg_Slide4.jpg");
 }
 
 .sport__intro {
+    margin: 0 0 5px;
+    font-size: 20px;
+    font-weight: 700;
     text-transform: uppercase;
+    color: $cl-white;
 }
 
 .sport__slogan {
+    margin: 0;
+    padding: 0 10px;
+    width: 325px;
+    font-size: 26px;
     text-transform: uppercase;
+    background-color: $cl-white;
 }
 
 .sport__title {
+    margin: 0;
+    font-size: 60px;
     text-transform: uppercase;
+    color: $cl-white;
+}
+
+.sport__desc {
+    margin: 0;
 }
