--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -3,7 +3,7 @@
 @import "variables.scss";
 @import "scaffolding.scss";
 @import "blocks/page-header.scss";
-@import "blocks/page-main.scss";
+@import "blocks/design.scss";
 @import "blocks/service.scss";
 @import "blocks/arrival.scss";
 @import "blocks/collection.scss";
@@ -12,5 +12,6 @@
 @import "blocks/discover.scss";
 @import "blocks/best.scss";
 @import "blocks/blog.scss";
+@import "blocks/form.scss";
 @import "blocks/footer.scss";
 
