--- a/source/scss/blocks/product.scss
+++ b/source/scss/blocks/product.scss
@@ -113,6 +113,35 @@
     margin-bottom: 20px;
 }
 
+.product__block {
+    position: relative;
+
+    &::before {
+        position: absolute;
+        content: "";
+        top: 30px;
+        right: 24px;
+        width: 13px;
+        height: 12px;
+        background-image: url("../img/Star_1.png");
+        background-repeat: repeat;
+        background-position: 0 0;
+    }
+
+    &::after {
+        position: absolute;
+        content: "";
+        top: 30px;
+        right: 0;
+        width: 12px;
+        height: 12px;
+        background-image: url("../img/Star_4.png");
+        background-repeat: repeat;
+        background-position: 0 0;
+        background-repeat: repeat-x;
+    }
+}
+
 .product__name {
     margin: 0 0 5px;
     font-weight: 400;
