--- a/source/scss/blocks/best.scss
+++ b/source/scss/blocks/best.scss
@@ -1,60 +1,129 @@
 .best {
-    margin-bottom: 30px;
+  margin-bottom: 30px;
 }
 
 .best__header {
-    width: 870px;
-    min-height: 85px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  width: 870px;
+  min-height: 85px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .best__title {
-    position: relative;
+  position: relative;
 
-    &::before {
-        position: absolute;
-        content: "";
-        top: 32px;
-        left: 0;
-        width: 50px;
-        height: 1px;
-        background-color: #000000;
-    }
+  &::before {
+    position: absolute;
+    content: "";
+    top: 32px;
+    left: 0;
+    width: 50px;
+    height: 1px;
+    background-color: #000000;
+  }
 }
 
 .best__all {
-    text-transform: uppercase;
+  text-transform: uppercase;
 }
 
 .best__list {
-    @include list;
-    display: flex;
-    justify-content: space-between;
+  @include list;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.best__item--unavailable {
+  filter: grayscale(1) opacity(0.7);
+}
+
+.best__item--unavailable::before {
+  content: "Нет в наличии";
+  position: absolute;
+  top: 0;
+  left: 0;
+
+  padding: 5px;
+
+  font-size: 14px;
 }
 
 .best__item img {
-    display: block;
-    margin-bottom: 20px;
+  display: block;
+  margin-bottom: 20px;
 }
 
 .best__name {
-    margin: 0;
+  margin: 0;
 }
 
 .best__total {
-    margin: 0;
+  margin: 0;
 }
 
 .best__list li:nth-child(4n) {
-    margin-top: -85px;
+  margin-top: -85px;
 }
 
 .best__list li:nth-child(4n) img {
-    margin-bottom: 0;
+  margin-bottom: 0;
 }
 
 .best__list li:nth-child(4n) .best__block {
-    display: none;
+  display: none;
+}
+
+.product--special {
+  order: -1;
+  width: 100%;
+  height: 380px;
+
+  flex-direction: column;
+  justify-content: flex-start;
+  align-content: space-between;
+}
+
+.product--special .product__title {
+  width: 270px;
+  max-width: 100%;
+  margin-bottom: 10px;
+
+  font-size: 28px;
+  line-height: 36px;
+}
+
+.product--special .product__price {
+  width: 270px;
+  max-width: 100%;
+  text-align: left;
+  text-decoration: line-through;
+  color: #cccccc;
+}
+
+.product--special .product__special-price {
+  margin: 0;
+}
+
+.product--special .product__image {
+  outline: 3px solid #ffc600;
+}
+
+.product--special::before {
+  content: "Товар дня";
+  position: absolute;
+  top: 0;
+  left: 0;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 5px 10px;
+
+  font-weight: 500;
+  color: #111111;
+  text-transform: uppercase;
+
+  background-color: #ffc600;
 }
