--- a/source/scss/blocks/product.scss
+++ b/source/scss/blocks/product.scss
@@ -1,154 +1,169 @@
 .product__header {
-    display: flex;
-    justify-content: space-between;
-    min-height: 60px;
-    padding-top: 25px;
+  display: flex;
+  justify-content: space-between;
+  min-height: 60px;
+  padding-top: 25px;
 }
 
 .product__title {
-    position: relative;
-    margin: 0;
-    font-size: 30px;
+  position: relative;
+  margin: 0;
+  font-size: 30px;
 
-    &::before {
-        position: absolute;
-        content: "";
-        top: 32px;
-        left: 0;
-        width: 50px;
-        height: 1px;
-        background-color: #000000;
-    }
+  &::before {
+    position: absolute;
+    content: "";
+    top: 32px;
+    left: 0;
+    width: 50px;
+    height: 1px;
+    background-color: #000000;
+  }
 }
 
 .product__all {
-    margin: 0;
-    font-size: 14px;
-    text-transform: uppercase;
+  margin: 0;
+  font-size: 14px;
+  text-transform: uppercase;
 }
 
 .product__list {
-    @include list;
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
+  @include list;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
 }
 
 .product__item {
-    width: 270px;
-    margin-bottom: 30px;
+  width: 270px;
+  margin-bottom: 30px;
 
-    &--hot {
-        position: relative;
-
-        &::before {
-            position: absolute;
-            content: "";
-            top: 0;
-            left: 0;
-            width: 20px;
-            height: 50px;
-            background-color: #ffff00;
-        }
-
-        &::after {
-            position: absolute;
-            content: "HOT";
-            top: 0;
-            left: 0;
-            color: #ff1100;
-            transform: rotateX(deg90);
-        }
-    }
-
-    &--new {
-        position: relative;
-
-        &::before {
-            position: absolute;
-            content: "";
-            top: 0;
-            left: 0;
-            width: 20px;
-            height: 50px;
-            background-color: #00c8c8;
-        }
-
-        &::after {
-            position: absolute;
-            content: "NEW";
-            top: 0;
-            left: 0;
-            color: #ffffff;
-            transform: rotateX(deg90);
-        }
-    }
-
-    &--sale {
-        position: relative;
-
-        &::before {
-            position: absolute;
-            content: "";
-            top: 0;
-            left: 0;
-            width: 20px;
-            height: 50px;
-            background-color: #ed1c24;
-        }
-
-        &::after {
-            position: absolute;
-            content: "SALE";
-            top: 0;
-            left: 0;
-            color: #ffffff;
-            transform: rotate(deg90);
-        }
-    }
-}
-
-.product__item img {
-    display: block;
-    margin-bottom: 20px;
-}
-
-.product__block {
+  &--hot {
     position: relative;
 
     &::before {
-        position: absolute;
-        content: "";
-        top: 30px;
-        right: 24px;
-        width: 13px;
-        height: 12px;
-        background-image: url("../img/Star_1.png");
-        background-repeat: repeat;
-        background-position: 0 0;
+      position: absolute;
+      content: "";
+      top: 0;
+      left: 0;
+      width: 20px;
+      height: 50px;
+      background-color: #ffff00;
     }
 
     &::after {
-        position: absolute;
-        content: "";
-        top: 30px;
-        right: 0;
-        width: 12px;
-        height: 12px;
-        background-image: url("../img/Star_4.png");
-        background-repeat: repeat;
-        background-position: 0 0;
-        background-repeat: repeat-x;
+      position: absolute;
+      content: "HOT";
+      top: 0;
+      left: 0;
+      color: #ff1100;
+      transform: rotateX(deg90);
     }
+  }
+
+  &--new {
+    position: relative;
+
+    &::before {
+      position: absolute;
+      content: "";
+      top: 0;
+      left: 0;
+      width: 20px;
+      height: 50px;
+      background-color: #00c8c8;
+    }
+
+    &::after {
+      position: absolute;
+      content: "NEW";
+      top: 0;
+      left: 0;
+      color: #ffffff;
+      transform: rotateX(deg90);
+    }
+  }
+
+  &--sale {
+    position: relative;
+
+    &::before {
+      position: absolute;
+      content: "";
+      top: 0;
+      left: 0;
+      width: 20px;
+      height: 50px;
+      background-color: #ed1c24;
+    }
+
+    &::after {
+      position: absolute;
+      content: "SALE";
+      top: 0;
+      left: 0;
+      color: #ffffff;
+      transform: rotate(deg90);
+    }
+  }
+}
+
+.product__item--unavailable {
+  filter: grayscale(1) opacity(0.7);
+}
+
+.product__item--unavailable::before {
+  content: "Нет в наличии";
+  position: absolute;
+  top: 0;
+  left: 0;
+
+  padding: 5px;
+
+  font-size: 14px;
+}
+
+.product__item img {
+  display: block;
+  margin-bottom: 20px;
+}
+
+.product__block {
+  position: relative;
+
+  &::before {
+    position: absolute;
+    content: "";
+    top: 30px;
+    right: 24px;
+    width: 13px;
+    height: 12px;
+    background-image: url("../img/Star_1.png");
+    background-repeat: repeat;
+    background-position: 0 0;
+  }
+
+  &::after {
+    position: absolute;
+    content: "";
+    top: 30px;
+    right: 0;
+    width: 12px;
+    height: 12px;
+    background-image: url("../img/Star_4.png");
+    background-repeat: repeat;
+    background-position: 0 0;
+    background-repeat: repeat-x;
+  }
 }
 
 .product__name {
-    margin: 0 0 5px;
-    font-weight: 400;
+  margin: 0 0 5px;
+  font-weight: 400;
 }
 
 .product__total {
-    margin: 0;
-    font-size: 20px;
-    font-weight: 700;
+  margin: 0;
+  font-size: 20px;
+  font-weight: 700;
 }
